Converted mint to drop wizard application