@@ -1,58 +1,66 @@
 package uk.gov.functional;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.jcabi.http.Request;
-import com.jcabi.http.Response;
-import com.jcabi.http.request.JdkRequest;
+import org.glassfish.jersey.client.JerseyClient;
+import org.glassfish.jersey.client.JerseyClientBuilder;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-import uk.gov.Application;
+import uk.gov.MintApplication;
 import uk.gov.mint.CanonicalJsonMapper;
 import uk.gov.store.EntriesQueryDAO;
 import uk.gov.store.EntriesUpdateDAO;
 import uk.gov.store.HighWaterMarkDAO;
 
-import java.io.InputStream;
+import javax.ws.rs.client.Entity;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
 import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.Collections;
 import java.util.List;
-import java.util.Properties;
 
-import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.core.Is.is;
+import static org.hamcrest.core.IsEqual.equalTo;
 import static org.junit.Assert.assertThat;
+
 
 public class FunctionalTest {
     private java.sql.Connection pgConnection;
-    private Application application;
+    private Thread application;
     private TestKafkaCluster testKafkaCluster;
-    private Properties properties;
+
+    @SuppressWarnings("FieldCanBeLocal")
+    private String applicationUrl = "http://localhost:4568/load";
+    @SuppressWarnings("FieldCanBeLocal")
+    private String postgresConnectionString = "jdbc:postgresql://localhost:5432/ft_mint";
 
     @Before
     public void setup() throws Exception {
-        properties = new Properties();
-        String configFilename = FunctionalTest.class.getResource("/test-application.properties").getFile();
-        InputStream resourceAsStream = FunctionalTest.class.getResourceAsStream("/test-application.properties");
-        properties.load(resourceAsStream);
 
-        pgConnection = DriverManager.getConnection(properties.getProperty("postgres.connection.string"));
+        String configFile = FunctionalTest.class.getResource("/test-config.yaml").getFile();
+
+        pgConnection = DriverManager.getConnection(postgresConnectionString);
 
         cleanDatabase();
 
-        testKafkaCluster = new TestKafkaCluster(6000); // must match test-application.properties
+        testKafkaCluster = new TestKafkaCluster(6000);
 
-        application = new Application("config.file=" + configFilename);
-        application.startup();
+        application = new Thread() {
+            @Override
+            public void run() {
+                MintApplication.main(new String[]{"server", configFile});
+            }
+        };
+        application.start();
     }
 
     @After
     public void tearDown() throws Exception {
-        application.shutdown();
+        application.interrupt();
         testKafkaCluster.stop();
     }
 
@@ -66,9 +74,8 @@ public class FunctionalTest {
         JsonNode messageJson = canonicalJsonMapper.readFromBytes(message);
 
         waitForMessageToBeConsumed();
-        send(
-                javaslang.collection.List.of(messageString)
-        );
+
+        send(Collections.singletonList(messageString));
 
         waitForMessageToBeConsumed();
 
@@ -89,19 +96,14 @@ public class FunctionalTest {
         assertThat(messages, is(Collections.singletonList(actualString)));
     }
 
-    private void send(javaslang.collection.List<String> payload) {
+    private void send(List<String> payload) {
         try {
-            final String mintUrl = properties.getProperty("mintUrl");
-            Response r = new JdkRequest(mintUrl)
-                    .method(Request.POST)
-                    .body()
-                    .set(payload.join("\n"))
-                    .back()
-                    .fetch();
-            if (r.status() != 200)
-                System.err.println("Unexpected result: " + r.body());
+            JerseyClient jerseyClient = JerseyClientBuilder.createClient();
+            Response response = jerseyClient.target(applicationUrl).request(MediaType.APPLICATION_JSON_TYPE).buildPost(Entity.json(String.join("\n", payload))).invoke();
+            if (response.getStatus() != 200)
+                System.err.println("Unexpected result: " + response.readEntity(String.class));
             else
-                System.out.println("Loaded " + payload.length() + " entries...");
+                System.out.println("Loaded " + payload.size() + " entries...");
         } catch (Exception e) {
             System.err.println("Error occurred sending data to mint: " + e);
         }
@@ -116,7 +118,7 @@ public class FunctionalTest {
     }
 
     private void waitForMessageToBeConsumed() throws InterruptedException {
-        Thread.sleep(500);
+        Thread.sleep(3000);
     }
 
     private void cleanDatabase() throws SQLException {
